// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ApplyPage default 1`] = `
<div
  className="mn"
>
  <div
    className="b b-c"
  >
    <div
      className="sh"
    >
      <h2
        className="sh-title"
      >
        Commissions Page Scaffold
      </h2>
    </div>
    <form
      onSubmit={[Function]}
    >
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          First Name
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="firstName"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="First Name"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          Middle Name
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="middleName"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Middle Name"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          Last Name
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="lastName"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Last Name"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          Address
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="address"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Address"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          Unit
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="unit"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Unit or Apartment #"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          City
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="city"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="City"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          State
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="state"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="State"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          Zip
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="zip"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Zip Code"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          Phone
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="phone"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Phone Number"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          Email
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Email"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="txt m-b300"
      >
        <label
          className="txt-l txt-l--sm"
          htmlFor="FeedbackForm-\${this.props.name}"
        >
          Confirm Email
        </label>
        <input
          className="txt-f txt-f--sm"
          id="FeedbackForm-\${this.props.name}"
          name="confirmEmail"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Confirm Email"
          required={undefined}
          type="text"
          value=""
        />
      </div>
      <button
        className="btn btn--700"
        type="submit"
      >
        Send Message
      </button>
    </form>
    <ul />
  </div>
</div>
`;

exports[`Storyshots TextInput default 1`] = `
<div
  className="txt m-b300"
>
  <label
    className="txt-l txt-l--sm"
    htmlFor="FeedbackForm-\${this.props.name}"
  >
    Zip Code
  </label>
  <input
    className="txt-f txt-f--sm"
    id="FeedbackForm-\${this.props.name}"
    name="zip"
    onBlur=""
    onChange=""
    placeholder="Zip Code"
    required={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots TextInput error 1`] = `
<div
  className="txt m-b300"
>
  <label
    className="txt-l txt-l--sm"
    htmlFor="FeedbackForm-\${this.props.name}"
  >
    Zip Code
    <span
      aria-hidden="true"
      className="t--req"
    >
       
      Required
    </span>
  </label>
  <input
    className="txt-f txt-f--sm txt-f--err"
    id="FeedbackForm-\${this.props.name}"
    name="zip"
    onBlur=""
    onChange=""
    placeholder="Zip Code"
    required={true}
    type="text"
    value=""
  />
  <div
    className="t--subinfo t--err m-t100"
  >
    Please Enter The Correct Zip Code, Zip Codes Contains 5 Digits.
  </div>
</div>
`;

exports[`Storyshots TextInput required 1`] = `
<div
  className="txt m-b300"
>
  <label
    className="txt-l txt-l--sm"
    htmlFor="FeedbackForm-\${this.props.name}"
  >
    Zip Code
    <span
      aria-hidden="true"
      className="t--req"
    >
       
      Required
    </span>
  </label>
  <input
    className="txt-f txt-f--sm"
    id="FeedbackForm-\${this.props.name}"
    name="zip"
    onBlur=""
    onChange=""
    placeholder="Zip Code"
    required={true}
    type="text"
    value=""
  />
</div>
`;
